# setfield

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  tests.py
.github/workflows/: workflow.yml
setfield/: __init__.py
